--- a/resources/pages/about.html
+++ b/resources/pages/about.html
@@ -1,25 +1,26 @@
 <section id="about">
-	<canvas id="canvas"></canvas>
+	<!-- <canvas id="canvas"></canvas> -->
 	<div class="container">
 		<h2>About me</h2>
 		<div class="slider">
 			<div class="about_box">
-				<div class="about_box_text">
-					<h3>Приветствую! Меня зовут Денис.</h3>
-					<p>Около года я занимаюсь интенсивным обучением в сфере front-end. Испытываю огромный интерес к данной сфере и хочу связать с ней дальнейшую деятельность. В данный момент успешно обучаюсь в компьютерной академии "ШАГ". Cтремлюсь постоянно улучшать свои навыки и осваивать новые. Умею работать в команде, легко нахожу общий язык с коллективом, обладаю чувством вкуса.</p>
-					<p>Нахожусь в поиске места работы, которое поможет мне начать профессиональный путь front-end разработчика.</p>
-					<form method="get" action="download/resume.pdf" name="download_resume" target="_blank">
-						<button class="resume_button" type="submit">РЕЗЮМЕ</button>
-					</form>
-				</div>
 				<div class="about_box_photo">
 					<img src="images/photo1.jpg" alt="my photo">
+				</div>
+				<div class="about_box_text">
+					<h3>Greetings! My name is Denis.</h3>
+					<p>I've been doing front-end development for over two years. Сommercial experience - over a year.</p><p> Currently I work at <a href="https://www.softlogic.com.ua/" target="_blank">SoftLogic</a>. My main commercial project while working in the company is the <a href="https://play.google.com/store/apps/details?id=com.taxiua.app" target="_blank">Taxi UA</a> mobile application. All the client side and the logic of the application was developed and written by me, using the Vue.js framework and the Apache Cordova mobile development environment. Also, I have written several web modules for integration into mobile applications of taxi services.</p>
+					<p>Before joining the company, I was engaged in intensive self-training for about a year. Also, during this time I finished courses on front-end development at <a href="https://itstep.org/" target="_blank">STEP Computer Academy</a>. I have great interest in this area and I am constantly trying to develop my skills and learn new technologies in my free time.</p>
+					<form method="get" action="download/resume.pdf" name="download_resume" target="_blank">
+						<button class="resume_button" type="submit">RESUME</button>
+					</form>
 				</div>
 			</div>
 			<div class="skills_box">
 				<div class="skills_text">
-					<p>Обладаю хорошими знаниями <strong>HTML5</strong> и <strong>CSS3</strong> (адаптивная, кроссбраузерная верстка по стандарту W3C). Использую препроцессор <strong>Sass</strong>, умею <strong></strong>пользоваться библиотекой <strong>Bootstrap 4</strong> (но ввиду ее недостатков делаю это только в случае необходимости). Могу Pixel Perfect. Знаком с СКВ <strong>Git</strong> и методологией <strong>БЭМ</strong>.</p>
-					<p>Также постоянно занимаюсь изучением и прокачкой своего скилла в <strong>Javascript</strong>. Пользуюсь библиотекой <strong>jQuery</strong>. В данный момент изучаю <strong>Ajax</strong> и <strong>JSON</strong>, фреймворк <strong>Vue.js</strong>, CMS (в частности <strong>Wordpress</strong>) и фреймворк <strong>Laravel</strong>.</p>
+					<p>I have good knowledge of <strong>JavaScript(ES6+)</strong>, <strong>HTML5</strong> and <strong>CSS3</strong>, basic <strong>PHP</strong>,<strong> Dart</strong> and <strong>SQL</strong> knowledge.
+					<p>Currently I develop cross-platform applications. I have experience in releasing applications on Google Play and all the subtleties associated with this. Now I am also interested in Flutter and have already started developing our new project with it.</p>
+					<p>The full list of my skills can be seen on this sphere.</p>
 				</div>
 				<div class="tagCloud">
 				</div>
