--- a/resources/pages/contacts.html
+++ b/resources/pages/contacts.html
@@ -18,12 +18,12 @@
 			</p>
 			<button id="btnSubmit" type="submit">SEND</button>
 		</form>
-		<p>Contact for any questions.<br> I will be glad to meet and cooperate.</p>
+		<p>Contact for any questions.<br> I will be glad to  cooperate.</p>
 		<p class="myContacts">
 			<span class="icons">
-				<img class="viber" src="images/viber.png" alt="viber">
-				<img class="telegram" src="images/telegram.png" alt="telegram">
-				<img class="whatsupp" src="images/whatsupp.png" alt="whatsupp">
+				<img class="viber" src="images/viber.png" alt="viber" title="Viber">
+				<img class="telegram" src="images/telegram.png" alt="telegram" title="Telegram">
+				<img class="whatsupp" src="images/whatsupp.png" alt="whatsupp" title="WhatsApp">
 				+38 (063) 428-62-94
 			</span>
 			<span class="social">
