--- a/resources/pages/portfolio.html
+++ b/resources/pages/portfolio.html
@@ -1,15 +1,28 @@
 <section id="portfolio">
 	<h2>My portfolio</h2>
-	<h3>Web sites...</h3>
+	<h3>Main projects ...</h3>
+	<div class="sites">
+		<div class="taxiua" data-img="taxiuaapp.png">
+			<h4>Taxi UA</h4>
+			<p><span>Used technologies: </span>Vue.js, Apache Cordova, custom JAVA plugins, Gradle, Axios, Yarn, Webpack, Babel, EsLint, PostCSS, SCSS, Firebase, Leaflet, i18n, SMS Retriever, Git, HTML5, CSS3, JS</p>
+			<a href="https://play.google.com/store/apps/details?id=com.taxiua.app" class="taxiua_link" target="_blank"></a>
+		</div>
+		<div class="taxiua_landing" data-img="taxiua.png">
+			<h4>Taxi UA Oficial Site</h4>
+			<p><span>Used technologies: </span>JS, jQuery, HTML5, CSS3, Bootstrap, AJAX</p>
+			<a href="https://taxiua.app" target="_blank"></a>
+		</div>
+	</div>
+	<h3>... study projects ...</h3>
 	<div class="sites">
 		<div class="lambda" data-img="lambda.png">
 			<h4>Restaurant site example</h4>
-			<p><span>Used technologies: </span>HTML5, CSS3, JS, BEM, responsive web design</p>
+			<p><span>Used technologies: </span>HTML5, CSS3, JS, BEM</p>
 			<a href="resources/lambda/index.html" class="lambda_link" target="_blank"></a>
 		</div>
 		<div class="mustang" data-img="mustang.png" >
 			<h4>Ford Mustang evolution</h4>
-			<p><span>Used technologies: </span>HTML5, CSS3, JS, jQuery, parallax scrolling, responsive web design</p>
+			<p><span>Used technologies: </span>HTML5, CSS3, JS, jQuery</p>
 			<a href="resources/mustangEvolution/index.html" class="mustang_link" target="_blank"></a>
 		</div>
 	</div>
